tests/valid/Negation_Valid_10.whiley
public export method test():
    assume -*new 1 == ---1