tests/invalid/Lifetime_Invalid_3.whiley
method foo() -> &this:int:
    return this:new 1

public export method test():
    foo()
